# dep-audit

./: .gitignore  Dockerfile  README.md  pyproject.toml
.github/workflows/: ci.yml
dep_audit/: __init__.py  __main__.py  cli.py  license.py  models.py  outdated.py  output.py  parsers.py  tree.py  vulnerability.py
tests/: conftest.py  test_cli.py  test_license.py  test_models.py  test_outdated.py  test_output.py  test_parsers.py  test_tree.py  test_vulnerability.py
