[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dep-audit-cli"
version = "1.0.0"
description = "Dependency auditing CLI — vulnerability scanning, license compliance, outdated detection, and dependency tree visualization."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Sanjay Sundar Murthy", email = "sanjaysundarmurthy@gmail.com"},
]
keywords = ["dependency", "audit", "vulnerability", "license", "security", "cli", "outdated", "cve"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "requests>=2.28",
    "packaging>=21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
dep-audit = "dep_audit.cli:cli"

[project.urls]
Homepage = "https://github.com/SanjaySundarMurthy/dep-audit"
Repository = "https://github.com/SanjaySundarMurthy/dep-audit"
Issues = "https://github.com/SanjaySundarMurthy/dep-audit/issues"

[tool.hatch.build.targets.wheel]
packages = ["dep_audit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "strict"

[tool.ruff]
target-version = "py38"
line-length = 120
